Complete OpenAPI description for proxy
Note that the frontend doesn't parse the OpenAPI description by spec,
but uses just parts of it (for example, references are not supported).
Therefore we need to inline that information into every method.
