# apiserver/api_proxy.go
@@ -50,12 +50,47 @@ func NewProxyApiController(s ProxyApiServicer, opts ...ProxyApiOption) Router {
 func (c *ProxyApiController) Routes() Routes {
 	return Routes{
 		{
+			"MsproxyMsGraphPathDelete",
+			strings.ToUpper("Delete"),
+			"/v1/msproxy/{ms-graph-path}",
+			c.MsproxyMsGraphPathDelete,
+		},
+		{
 			"MsproxyMsGraphPathGet",
 			strings.ToUpper("Get"),
 			"/v1/msproxy/{ms-graph-path}",
 			c.MsproxyMsGraphPathGet,
 		},
+		{
+			"MsproxyMsGraphPathPost",
+			strings.ToUpper("Post"),
+			"/v1/msproxy/{ms-graph-path}",
+			c.MsproxyMsGraphPathPost,
+		},
+		{
+			"MsproxyMsGraphPathPut",
+			strings.ToUpper("Put"),
+			"/v1/msproxy/{ms-graph-path}",
+			c.MsproxyMsGraphPathPut,
+		},
 	}
+}
+
+// MsproxyMsGraphPathDelete - A proxy server that passes requests to the Microsoft Graph API
+func (c *ProxyApiController) MsproxyMsGraphPathDelete(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	msGraphPathParam := params["ms-graph-path"]
+
+	elionaProjectIdParam := r.Header.Get("eliona-project-id")
+	result, err := c.service.MsproxyMsGraphPathDelete(r.Context(), msGraphPathParam, elionaProjectIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
 }
 
 // MsproxyMsGraphPathGet - A proxy server that passes requests to the Microsoft Graph API
@@ -63,8 +98,42 @@ func (c *ProxyApiController) MsproxyMsGraphPathGet(w http.ResponseWriter, r *htt
 	params := mux.Vars(r)
 	msGraphPathParam := params["ms-graph-path"]
 
-	elionaProjectIdParam := r.Header.Get("Eliona-Project-Id")
+	elionaProjectIdParam := r.Header.Get("eliona-project-id")
 	result, err := c.service.MsproxyMsGraphPathGet(r.Context(), msGraphPathParam, elionaProjectIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// MsproxyMsGraphPathPost - A proxy server that passes requests to the Microsoft Graph API
+func (c *ProxyApiController) MsproxyMsGraphPathPost(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	msGraphPathParam := params["ms-graph-path"]
+
+	elionaProjectIdParam := r.Header.Get("eliona-project-id")
+	result, err := c.service.MsproxyMsGraphPathPost(r.Context(), msGraphPathParam, elionaProjectIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// MsproxyMsGraphPathPut - A proxy server that passes requests to the Microsoft Graph API
+func (c *ProxyApiController) MsproxyMsGraphPathPut(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	msGraphPathParam := params["ms-graph-path"]
+
+	elionaProjectIdParam := r.Header.Get("eliona-project-id")
+	result, err := c.service.MsproxyMsGraphPathPut(r.Context(), msGraphPathParam, elionaProjectIdParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
